Proper code formatting and put the hashing function in one class to follow OOP rules

--- a/DigitizingDataAdminApp/Views/Dashboard/EditUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditUser.cshtml
@@ -6,7 +6,8 @@
 }
 
 
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.ValidationSummary(true)
 
     <fieldset>
@@ -14,57 +15,57 @@
 
         @Html.HiddenFor(model => model.Id)
         <div class="form-group">
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Username)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Username)
-            @Html.ValidationMessageFor(model => model.Username)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Username)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Username)
+                @Html.ValidationMessageFor(model => model.Username)
+            </div>
 
-            </div>
+        </div>
         <div class="form-group">
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Password)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Password)
-            @Html.ValidationMessageFor(model => model.Password)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Password)
             </div>
-        <div class="form-group">
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Fullname)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Fullname)
-            @Html.ValidationMessageFor(model => model.Fullname)
-        </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Password)
+                @Html.ValidationMessageFor(model => model.Password)
             </div>
+        </div>
         <div class="form-group">
-        <div class="editor-label">
-            @Html.LabelFor(model => model.Email)
-        </div>
-        <div class="editor-field">
-            @Html.EditorFor(model => model.Email)
-            @Html.ValidationMessageFor(model => model.Email)
-        </div>
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Fullname)
             </div>
-        <div class="form-group">
-        <div class="editor-label">
-            @Html.LabelFor(model => model.UserLevel)
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Fullname)
+                @Html.ValidationMessageFor(model => model.Fullname)
+            </div>
         </div>
-        <div class="editor-field">
-            @*@Html.EditorFor(model => model.UserLevel)
+        <div class="form-group">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.Email)
+            </div>
+            <div class="editor-field">
+                @Html.EditorFor(model => model.Email)
+                @Html.ValidationMessageFor(model => model.Email)
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="editor-label">
+                @Html.LabelFor(model => model.UserLevel)
+            </div>
+            <div class="editor-field">
+                @*@Html.EditorFor(model => model.UserLevel)
             @Html.ValidationMessageFor(model => model.UserLevel)*@
-            @Html.DropDownList("Level_Id", Model.UserTypes, new { @style = "width:250px; height:30px;" })
-        </div>
-</div>
-        <div class="form-group">
-        <p>
-            <input class="btn btn-small btn-primary" type="submit" value=" Update " style="width: 100px;" />
-        </p>
+                @Html.DropDownList("Level_Id", Model.UserTypes, new { @style = "width:250px; height:30px;" })
             </div>
+        </div>
+        <div class="form-group">
+            <p>
+                <input class="btn btn-small btn-primary" type="submit" value=" Update " style="width: 100px;" />
+            </p>
+        </div>
     </fieldset>
 }
 
