--- a/DigitizingDataAdminApp/Views/Shared/_CustomLoginPage.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLoginPage.cshtml
@@ -5,7 +5,7 @@
     <title>@ViewBag.Title</title>
     <link href="~/favicon.ico" rel="shortcut icon" type="image/x-icon" />
     <meta name="viewport" content="width=device-width" />
-    @Styles.Render("~/Content/css")
+    @*  @Styles.Render("~/Content/css")*@
     @Scripts.Render("~/bundles/modernizr")
     @Scripts.Render("~/bundles/knockout")
     @Scripts.Render("~/bundles/jquery")
@@ -19,13 +19,6 @@
 <body>
 
     <div class="container wrap sidebar-right">
-        @*<div class="container-fluid" style="margin-top: 20px;">
-            <div class="row">
-                <div class="navbar-header col-mod-12">
-                    <h3>@Html.ActionLink("your logo here", "Index", "Login")</h3>
-                </div>
-            </div>
-        </div>*@
         <div class="container" style="margin-top: 100px; margin-bottom: 200px;">
             <div class="vertical-center-row horizontal-center-row">
                 <div class="col-sm-12 col-md-10 col-md-offset-1">
@@ -39,7 +32,7 @@
 
 
 
-        <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px; height:50px;">
+        <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px; height: 50px;">
 
             <p style="text-align: center;">&copy; @DateTime.Now.Year - LedgerLink Administrator Portal</p>
 
