--- a/DigitizingDataAdminApp/Views/Dashboard/VslaMeetings.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaMeetings.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "VslaMeetings";
 }
 
-<h4>VslaMeetings</h4>
+<h4>All VSLA Meetings For @Model.vslaName</h4>
 <div style="width: auto;min-width:1000px; margin: 0 auto;">
     @Html.Grid(Model.allVslaMeetings).Columns(columns =>
                     {
