--- a/DigitizingDataAdminApp/Views/Dashboard/AddVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddVsla.cshtml
@@ -44,7 +44,7 @@
                 @Html.LabelFor(model => model.DateRegistered)
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.DateRegistered)
+                @Html.EditorFor(model => model.DateRegistered, new { @class="datefield"})
                 @Html.ValidationMessageFor(model => model.DateRegistered)
             </div>
         </div>
@@ -53,7 +53,7 @@
                 @Html.LabelFor(model => model.DateLinked)
             </div>
             <div class="editor-field">
-                @Html.EditorFor(model => model.DateLinked)
+                @Html.EditorFor(model => model.DateLinked, new { @class="datefield"})
                 @Html.ValidationMessageFor(model => model.DateLinked)
             </div>
         </div>
