--- a/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
@@ -37,9 +37,9 @@
                     <div class="well sidebar-offcanvas vertical-align">
                         <ul class="nav  nav-pills nav-stacked" role="navigation">
                             <li>@Html.ActionLink("Home", "Dashboard", "Dashboard") </li>
-                            <li>@Html.ActionLink("Vlsa", "VslaData", "Dashboard")</li>
-                            <li>@Html.ActionLink("Cbt", "CbtData", "Dashboard")</li>
-                            <li>@Html.ActionLink("Users", "UsersData", "Dashboard")</li>
+                            <li>@Html.ActionLink("VSLA Groups", "VslaData", "Dashboard")</li>
+                            <li>@Html.ActionLink("CBTs", "CbtData", "Dashboard")</li>
+                            <li>@Html.ActionLink("System Users", "UsersData", "Dashboard")</li>
                             <li>@Html.ActionLink("Logs", "LogsData", "Dashboard")</li>
                             <li>@Html.ActionLink("Logout", "Logout")</li>
                         </ul>
