--- a/DigitizingDataAdminApp/Views/Dashboard/MemberDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/MemberDetails.cshtml
@@ -29,11 +29,11 @@
     </tr>
     <tr>
         <td><strong>@Html.DisplayName("Date of Birth")</strong></td>
-        <td>@Html.DisplayFor(model => model.DateOfBirth)</td>
+        <td>@Html.DisplayFor(model => model.formattedDateOfBirth)</td>
     </tr>
     <tr>
         <td><strong>@Html.DisplayName("Date Archive")</strong></td>
-        <td>@Html.DisplayFor(model => model.dateArchived)</td>
+        <td>@Html.DisplayFor(model => model.formattedDateArchived)</td>
     </tr>
     <tr>
         <td><strong>@Html.DisplayName("Number of Cycles Completed")</strong></td>
