--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -4,7 +4,8 @@
     Layout = "~/Views/Shared/_CustomLayout.cshtml";
     ViewBag.Title = "SingleMeetingDetails";
 }
-<h4>Details for the Meeting held on @Model.meetingDate</h4>
+<h4>Details for the Meeting held on @Model.meetingDate.Value.ToShortDateString()</h4>
+<p> @Html.ActionLink("Export to CSV", "ExportSingleMeetingDetailsCSV", new {id=@Model.vslaId})</p>
 <div style="width: auto; min-width:1000px; margin: 0 auto;">
     @Html.Grid(this.Model.allMeetingData).Columns(columns =>
                     {
