--- a/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
@@ -56,7 +56,7 @@
 
         <div class="panel-footer col-md-12" style="padding: 20px; margin-top: 10px; height: 50px;">
 
-            <p style="text-align: center;">&copy; @DateTime.Now.Year - LedgerLink Administrator Portal</p>
+            <p style="text-align: center;">&copy; @DateTime.Now.Year - LedgerLink Manager</p>
 
         </div>
     </div>
