Added clear definition to image links on vsla, cbt and system users

--- a/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
@@ -10,6 +10,7 @@
 <p>
     <a href="@Url.Action("AddCbt", "Dashboard")">
         <img  src="@Url.Content("~/Content/Images/add_cbt.png")"/>
+        <strong>Add New CBT</strong>
     </a>
 </p>
 
