--- a/DigitizingDataAdminApp/Views/Dashboard/MemberDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/MemberDetails.cshtml
@@ -52,3 +52,5 @@
         <td>@Html.DisplayFor(model => model.phoneNumber)</td>
     </tr>
 </table>
+<p> <strong> @Html.ActionLink("Back to Members List", "VslaMembers", new {id = @Model.vslaId })</strong></p>
+
