--- a/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
@@ -8,7 +8,7 @@
 <h4>Registered Users Information</h4>
 <hr />
 <p>
-    <a href="@Url.Action("AddUser", "Dashboard")"><img  src="@Url.Content("~/Content/Images/system_user.png")"/> </a>
+    <a href="@Url.Action("AddUser", "Dashboard")"><img  src="@Url.Content("~/Content/Images/system_user.png")"/> <strong> Add System User </strong></a>
 </p>
 
 <div style="width: auto;min-width:1000px; margin: 0 auto;">
