--- a/DigitizingDataAdminApp/Views/Dashboard/LogsData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/LogsData.cshtml
@@ -11,7 +11,7 @@
 <div style="width: auto; min-width:1000px; margin: 0 auto;">
     @Html.Grid(Model.AllLogsList).Columns(columns =>
                     {
-                        columns.Add(c => c.LogId).Titled("Id");
+                        columns.Add(c => c.LogId).Titled("ID");
                         columns.Add(c => c.userId).Titled("User");
                         columns.Add(c => c.formattedLogTime).Titled("Log time");
                         columns.Add(c => c.ActionPerformed).Titled("Action Performed");
