--- a/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/SingleMeetingDetails.cshtml
@@ -8,9 +8,10 @@
 <p>
     @*@Html.ActionLink("Export to CSV", "ExportSingleMeetingDetailsCSV", new {id=@Model.vslaId})*@
     <a href="@Url.Action("ExportSingleMeetingDetailsCSV", "Dashboard", new { id = @Model.vslaId })">
-        <img  src="@Url.Content("~/Content/Images/export_csv.png")"/>
+        <img  src="@Url.Content("~/Content/Images/export_csv.png")"/> <strong>Export to CSV</strong>
     </a>
-
+    |
+    <strong>@Html.ActionLink("Back to VSLAs", "VslaData")</strong>
 </p>
 <div style="width: auto; min-width: 1000px; margin: 0 auto;">
     @Html.Grid(this.Model.allMeetingData).Columns(columns =>
