--- a/DigitizingDataAdminApp/Views/Dashboard/EditCbt.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditCbt.cshtml
@@ -19,7 +19,9 @@
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Region")</strong></td>
-            <td>@Html.DropDownList("RegionId", Model.VslaRegionsModel, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("RegionId", Model.VslaRegionsModel, new { @style = "width:250px; height:30px;" })
+                @Html.ValidationMessageFor(model => model.Region)
+            </td>
         </tr>
 
         <tr>
@@ -34,7 +36,9 @@
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Status")</strong></td>
-            <td>@Html.DropDownList("Status_Id", Model.StatusType, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("Status_Id", Model.StatusType, new { @style = "width:250px; height:30px;" })
+                @Html.ValidationMessageFor(model => model.Status)
+            </td>
         </tr>
     </table>
     <p>
