--- a/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
@@ -34,7 +34,8 @@
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Access Level")</strong></td>
-            <td>@Html.DropDownList("Level_Id", Model.AccessLevel, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("Level_Id", Model.AccessLevel, new { @style = "width:250px; height:30px;" })
+                @Html.ValidationMessageFor(model => model.AccessLevel)</td>
         </tr>
     </table>
     <p>
