--- a/DigitizingDataAdminApp/Views/Dashboard/AddVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddVsla.cshtml
@@ -23,17 +23,19 @@
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Region")</strong></td>
-            <td>@Html.DropDownList("RegionId", Model.VslaRegionsModel, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("RegionId", Model.VslaRegionsModel, new { @style = "width:175px; height:30px;" })
+                @Html.ValidationMessageFor(model => model.RegionName)
+            </td>
         </tr>
 
         <tr>
             <td><strong>@Html.DisplayName("Date Registered")</strong></td>
-            <td>@Html.TextBoxFor(model => model.DateRegistered, new { @class = "date", @id = "DateRegistered", @Value = Model.DateRegistered.ToString() })
+            <td>@Html.TextBoxFor(model => model.DateRegistered, new {@Value = @DateTime.Now.ToShortDateString()})
                 @Html.ValidationMessageFor(model => model.DateRegistered)</td>
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Date linked")</strong></td>
-            <td>@Html.TextBoxFor(model => model.DateLinked, new { @class = "date", @id = "DateLinked", @Value = Model.DateLinked.ToString() })
+            <td>@Html.TextBoxFor(model => model.DateLinked, new { @Value = @DateTime.Now.ToShortDateString()})
                 @Html.ValidationMessageFor(model => model.DateLinked)</td>
         </tr>
         <tr>
@@ -68,11 +70,15 @@
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Responsible CBT")</strong></td>
-            <td>@Html.DropDownList("Id", Model.CbtModel, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("Id", Model.CbtModel, new { @style = "width:175px; height:30px;" })
+                 @Html.ValidationMessageFor(model => model.CBT)
+            </td>
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Status of VSLA")</strong></td>
-            <td>@Html.DropDownList("Status_Id", Model.StatusType, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("Status_Id", Model.StatusType, new { @style = "width:175px; height:30px;" })
+                 @Html.ValidationMessageFor(model => model.Status)
+            </td>
         </tr>
     </table>
     <p>
