--- a/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
@@ -72,11 +72,15 @@
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Responsible CBT")</strong></td>
-            <td>@Html.DropDownList("Id", Model.CbtModel, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("Id", Model.CbtModel, new { @style = "width:250px; height:30px;" })
+                 @Html.ValidationMessageFor(model => model.CbtModel)
+            </td>
         </tr>
         <tr>
             <td><strong>@Html.DisplayName("Status of VSLA")</strong></td>
-            <td>@Html.DropDownList("Status_Id", Model.StatusType, new { @style = "width:250px; height:30px;" })</td>
+            <td>@Html.DropDownList("Status_Id", Model.StatusType, new { @style = "width:250px; height:30px;" })
+                @Html.ValidationMessageFor(model => model.StatusType)
+            </td>
         </tr>
     </table>
     <p>
