--- a/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddUser.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
-    <h4 style="text-align: center;">Add New User </h4>
+    <h4 style="text-align: center;"><strong>Add New User</strong></h4>
     <hr />
     <table class="table table-bordered">
         <tr>
