--- a/DigitizingDataAdminApp/Views/Dashboard/LogsData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/LogsData.cshtml
@@ -5,10 +5,10 @@
     ViewBag.Title = "LogsData";
 }
 
-<h4>User-System Interaction Logs</h4>
+<h4><strong>User-System Interaction Logs</strong></h4>
 <hr />
 
-<div style="width: auto; min-width:1000px; margin: 0 auto;">
+<div style="width: auto; min-width: 1000px; margin: 0 auto;">
     @Html.Grid(Model.AllLogsList).Columns(columns =>
                     {
                         columns.Add(c => c.LogId).Titled("ID");
