--- a/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
@@ -5,15 +5,17 @@
     ViewBag.Title = "VslaData";
 }
 
-<h4>All Village Savings And Lending Associations</h4>
+<h4><strong>All Village Savings And Lending Associations</strong></h4>
 <hr />
 
 <p>
     <a href="@Url.Action("AddVsla", "Dashboard")">
-        <img  src="@Url.Content("~/Content/Images/add_group.png")"/> <strong>Add New VSLA</strong>
+        <img  src="@Url.Content("~/Content/Images/add_group.png")"/>
+        <strong>Add New VSLA</strong>
     </a>|
     <a href="@Url.Action("ExportVSLAsToCSV", "Dashboard")">
-        <img  src="@Url.Content("~/Content/Images/export_csv.png")"/> <strong>Export to CSV</strong>
+        <img  src="@Url.Content("~/Content/Images/export_csv.png")"/>
+        <strong>Export to CSV</strong>
     </a>
 </p>
 
