--- a/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "CbtData";
 }
 
-<h4>Community Based Trainers(CBTs)</h4>
+<h4><strong>Based Trainers(CBTs)</strong></h4>
 <hr />
 <p>
     <a href="@Url.Action("AddCbt", "Dashboard")">
