--- a/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
@@ -7,7 +7,7 @@
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
-    <h4 style="text-align: center;">Edit Information for @Html.DisplayFor(model => model.VslaName) </h4>
+    <h4 style="text-align: center;"><strong>Edit Information for @Html.DisplayFor(model => model.VslaName)</strong></h4>
     <hr />
     <table class="table table-bordered">
         <thead>
@@ -73,7 +73,7 @@
         <tr>
             <td><strong>@Html.DisplayName("Responsible CBT")</strong></td>
             <td>@Html.DropDownList("Id", Model.CbtModel, new { @style = "width:250px; height:30px;" })
-                 @Html.ValidationMessageFor(model => model.CbtModel)
+                @Html.ValidationMessageFor(model => model.CbtModel)
             </td>
         </tr>
         <tr>
