--- a/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/UsersData.cshtml
@@ -5,13 +5,15 @@
     ViewBag.Title = "UsersData";
 }
 
-<h4>Registered Users Information</h4>
+<h4><strong>Registered Users Information</strong></h4>
 <hr />
 <p>
-    <a href="@Url.Action("AddUser", "Dashboard")"><img  src="@Url.Content("~/Content/Images/system_user.png")"/> <strong> Add System User </strong></a>
+    <a href="@Url.Action("AddUser", "Dashboard")">
+        <img  src="@Url.Content("~/Content/Images/system_user.png")"/>
+        <strong>Add System User </strong></a>
 </p>
 
-<div style="width: auto;min-width:1000px; margin: 0 auto;">
+<div style="width: auto; min-width: 1000px; margin: 0 auto;">
     @Html.Grid(Model.AllUsersList).Columns(columns =>
                     {
                         columns.Add(c => c.Id).Titled("UserId");
@@ -20,7 +22,7 @@
                         columns.Add(c => c.Email).Titled("Email");
                         columns.Add(c => c.UserLevel).Titled("User Level");
                         columns.Add().Titled("Details").Encoded(false).Sanitized(false).RenderValueAs(c => @<a href="@Url.Action("UserDetails", "Dashboard", new { id = c.Id })">
-                       <img  src="@Url.Content("~/Content/Images/details.png")"/></a>);
+                            <img  src="@Url.Content("~/Content/Images/details.png")"/></a>);
                         columns.Add().Titled("Edit").Encoded(false).Sanitized(false).RenderValueAs(c => @<a href="@Url.Action("EditUser", "Dashboard", new { id = c.Id })">
                             <img  src="@Url.Content("~/Content/Images/edit.png")"/></a>);
                         columns.Add().Titled("Delete").Encoded(false).Sanitized(false).RenderValueAs(c => @<a href="@Url.Action("DeleteUser", "Dashboard", new { id = c.Id })">
