Added code to auto-generate the VSLA code

--- a/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditVsla.cshtml
@@ -17,7 +17,7 @@
         </thead>
         <tr>
             <td><strong>@Html.DisplayName("VSLA Code")</strong></td>
-            <td>@Html.EditorFor(model => model.VslaCode)
+            <td>@Html.DisplayFor(model => model.VslaCode)
                 @Html.ValidationMessageFor(model => model.VslaCode)</td>
         </tr>
         <tr>
