--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteVsla.cshtml
@@ -16,7 +16,7 @@
         <td>@Html.DisplayFor(model => model.VslaName)</td>
     </tr>
     <tr>
-        <td><strong>@Html.DisplayName("Region")</strong></td>
+        <td><strong>@Html.DisplayName("District")</strong></td>
         <td>@Html.DisplayFor(model => model.RegionId)</td>
     </tr>
 
