--- a/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaData.cshtml
@@ -5,7 +5,7 @@
     ViewBag.Title = "VslaData";
 }
 
-<h4><strong>All Village Savings And Lending Associations</strong></h4>
+<h4><strong>List Of All VSLAs</strong></h4>
 <hr />
 
 <p>
