--- a/DigitizingDataAdminApp/Views/Dashboard/AddVsla.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/AddVsla.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
-    <h4 style="text-align: center; min-width: 800px;"><strong>Add New Vsla</strong></h4>
+    <h4 style="text-align: center; min-width: 800px;"><strong>Add New VSLA</strong></h4>
     <hr />
     <table class="table table-bordered">
         @*<tr>
@@ -34,7 +34,7 @@
                 @Html.ValidationMessageFor(model => model.DateRegistered)</td>
         </tr>
         <tr>
-            <td><strong>@Html.DisplayName("Date linked")</strong></td>
+            <td><strong>@Html.DisplayName("Date linked to the Bank")</strong></td>
             <td>@Html.TextBoxFor(model => model.DateLinked, new { @Value = @DateTime.Now.ToShortDateString() })
                 @Html.ValidationMessageFor(model => model.DateLinked)</td>
         </tr>
