--- a/DigitizingDataAdminApp/Views/Dashboard/VslaDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/VslaDetails.cshtml
@@ -17,7 +17,7 @@
         <td>@Html.DisplayFor(model => model.VslaName)</td>
     </tr>
     <tr>
-        <td><strong>@Html.DisplayName("Region")</strong></td>
+        <td><strong>@Html.DisplayName("District")</strong></td>
         <td>@Html.DisplayFor(model => model.RegionId)</td>
     </tr>
 
@@ -26,7 +26,7 @@
         <td>@Html.DisplayFor(model => model.DateRegistered)</td>
     </tr>
     <tr>
-        <td><strong>@Html.DisplayName("Date linked")</strong></td>
+        <td><strong>@Html.DisplayName("Date linked to the Bank")</strong></td>
         <td>@Html.DisplayFor(model => model.DateLinked)</td>
     </tr>
     <tr>
