--- a/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
@@ -15,7 +15,8 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>Name</th>
+                <th>FirstName</th>
+                <th>LastName</th>
                 <th>District</th>
                 <th>PhoneNumber</th>
                 <th>Email</th>
@@ -30,7 +31,8 @@
             { 
                 <tr>
                     <td>@item.Id</td>
-                    <td>@item.Name</td>
+                    <td>@item.FirstName</td>
+                    <td>@item.LastName</td>
                     <td>@item.Region</td>
                     <td>@item.PhoneNumber</td>
                     <td>@item.Email</td>
