Compressed the logo and made dataTables reference to files stored offline

--- a/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
@@ -15,8 +15,7 @@
         <thead>
             <tr>
                 <th>ID</th>
-                <th>FirstName</th>
-                <th>LastName</th>
+                <th>FullName</th>
                 <th>District</th>
                 <th>PhoneNumber</th>
                 <th>Email</th>
@@ -31,8 +30,7 @@
             { 
                 <tr>
                     <td>@item.Id</td>
-                    <td>@item.FirstName</td>
-                    <td>@item.LastName</td>
+                    <td>@item.Name</td>
                     <td>@item.Region</td>
                     <td>@item.PhoneNumber</td>
                     <td>@item.Email</td>
