Fixed the error that occurs when trying to update the user details

--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteUser.cshtml
@@ -22,8 +22,8 @@
         <td>@Html.DisplayFor(model => model.Email)</td>
     </tr>
     <tr>
-        <td><strong>@Html.DisplayName("Password")</strong></td>
-        <td>@Html.DisplayFor(model => model.Password)</td>
+        <td><strong>@Html.DisplayName("Date Registered")</strong></td>
+        <td>@Html.DisplayFor(model => model.FormattedDateCreated)
     </tr>
     <tr>
         <td><strong>@Html.DisplayName("Access Level")</strong></td>
