--- a/DigitizingDataAdminApp/Views/Dashboard/EditCbt.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/EditCbt.cshtml
@@ -8,7 +8,7 @@
 @using (Html.BeginForm())
 {
     @Html.ValidationSummary(true)
-    <h4 style="text-align: center;"><strong>Edit information for @Html.DisplayFor(model => model.Name)</strong></h4>
+    <h4 style="text-align: center;"><strong>Edit information for @Html.DisplayFor(model => model.FirstName)</strong></h4>
     <hr />
     <table class="table table-bordered">
         @Html.HiddenFor(model => model.Id)
