Added User Levels to access different functionalitirs of the system

--- a/DigitizingDataAdminApp/Views/Dashboard/CbtDetails.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtDetails.cshtml
@@ -34,6 +34,6 @@
     </tr>
 </table>
 <p>
-    @Html.ActionLink("Edit", "EditCbt", new { id = Model.Id }) |
+    @*@Html.ActionLink("Edit", "EditCbt", new { id = Model.Id }) |*@
     @Html.ActionLink("Back to List", "CbtData")
 </p>
