--- a/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/CbtData.cshtml
@@ -6,13 +6,16 @@
 
 <h4><strong>Community Based Trainers(CBTs)</strong></h4>
 <hr />
+@if(@Model.SessionUserLevel == 1) {
 <p>
     <a href="@Url.Action("AddCbt", "Dashboard")"><strong>Add New CBT</strong></a>
 </p>
+}
 
 <div style="width: auto; min-width: 900px; margin: 0 auto;">
     <table class="display" style="width: 100%;" id="data-table">
         <thead>
+            @if(@Model.SessionUserLevel == 1) {
             <tr>
                 <th>ID</th>
                 <th>FullName</th>
@@ -24,10 +27,22 @@
                 <th>Edit</th>
                 <th>Delete</th>
             </tr>
+            } else {
+               <tr>
+                <th>ID</th>
+                <th>FullName</th>
+                <th>District</th>
+                <th>PhoneNumber</th>
+                <th>Email</th>
+                <th>Status</th>
+                <th>Details</th>
+            </tr>  
+            }
         </thead>
         <tbody>
             @foreach (var item in Model.AllCbtList)
             { 
+                if(@Model.SessionUserLevel == 1) {
                 <tr>
                     <td>@item.Id</td>
                     <td>@item.Name</td>
@@ -42,6 +57,18 @@
                     <td><a href="@Url.Action("DeleteCbt", "Dashboard", new { id = item.Id })">
                         <img  src="@Url.Content("~/Content/Images/delete.png")"/></a></td>
                 </tr>
+                } else {
+                <tr>
+                    <td>@item.Id</td>
+                    <td>@item.Name</td>
+                    <td>@item.Region</td>
+                    <td>@item.PhoneNumber</td>
+                    <td>@item.Email</td>
+                    <td>@item.Status</td>
+                    <td><a href="@Url.Action("CbtDetails", "Dashboard", new { id = item.Id })">
+                        <img  src="@Url.Content("~/Content/Images/details.png")"/></a></td>
+                </tr>
+                }
             }
         </tbody>
     </table>
