--- a/DigitizingDataAdminApp/Views/Dashboard/DeleteCbt.cshtml
+++ b/DigitizingDataAdminApp/Views/Dashboard/DeleteCbt.cshtml
@@ -17,6 +17,14 @@
         <td>@Html.DisplayFor(model => model.LastName)</td>
     </tr>
     <tr>
+        <td><strong>@Html.DisplayName("Username")</strong></td>
+        <td>@Html.DisplayFor(model => model.Username)</td>
+    </tr>
+    <tr>
+        <td><strong>@Html.DisplayName("Pass Key")</strong></td>
+        <td>@Html.DisplayFor(model => model.Passkey)</td>
+    </tr>
+    <tr>
         <td><strong>@Html.DisplayName("District")</strong></td>
         <td>@Html.DisplayFor(model => model.Region)</td>
     </tr>
