Added new File for viewing weekly meetings since 29-07-2014

--- a/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
+++ b/DigitizingDataAdminApp/Views/Shared/_CustomLayout.cshtml
@@ -59,6 +59,7 @@
                         <li><strong>@Html.ActionLink("VSLA Groups", "VslaData", "Dashboard")</strong></li>
                         <li><strong>@Html.ActionLink("CBTs", "CbtData", "Dashboard")</strong></li>
                         <li><strong>@Html.ActionLink("System Users", "UsersData", "Dashboard")</strong></li>
+                        <li><strong>@Html.ActionLink("Meeting Stats", "DatabaseScriptedInformation", "Dashboard")</strong></li>
                         <li><strong>@Html.ActionLink("Logout", "Logout")</strong></li>
                     </ul>
 
